--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 # For MySQL connection
-spring.datasource.url=jdbc:mysql://localhost:3306/vaccine_appointment?serverTimezone=UTC&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=takming
+spring.datasource.url=jdbc:mysql://us-cdbr-east-05.cleardb.net:3306/heroku_54e16fab85facea?serverTimezone=UTC&useSSL=false
+spring.datasource.username=b1e44c95c5850d
+spring.datasource.password=5a89a1ed
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.http.encoding.force=true
